--- a/CogMI2025/_includes/footer1.html
+++ b/CogMI2025/_includes/footer1.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <p>
-                        2025 &copy; <a href="#">CIC2025</a> All Rights Reserved.
+                        2025 &copy; <a href="#">IEEECogMI</a> All Rights Reserved.
                     </p>
                     <p>
                         Thanks for the template provider <a href="https://github.com/Chandler-He/acmsigir2020.git">ACMSIGIR</a>
