--- a/CogMI2025/assets/css/custom1.css
+++ b/CogMI2025/assets/css/custom1.css
@@ -45,7 +45,7 @@
     list-style: none;
     width: 33%;
     float: left;
-    height: 220px;
+    height: 260px;
     overflow: hidden;
     text-align: center;
     font-size: 10px;
@@ -60,8 +60,8 @@
 }
 
 #organizers ul li.person-card a img {
-    width: 55%;
-    height: 50%;
+    width: 160px;
+    height: 180px;
     display: block;
     margin: 0 auto 5px;
     padding: 2px;
