--- a/tps2025/_includes/navbar.html
+++ b/tps2025/_includes/navbar.html
@@ -11,49 +11,41 @@
         </div>
         <div class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
+                <li class=""><a href="../index.html" style="font-weight: 1000; color:black">IEEE CIC</a></li>
                 <li class="dropdown">
-                    <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Submit</a>
+                    <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Calls</a>
                     <ul class="dropdown-menu">
-                        <li><a href="#list-of-calls">List of calls</a></li>
+                        <!-- <li><a href="#list-of-calls">List of Calls</a></li> -->
                         <li><a href="#{{ site.baseurl }}/call-for-full-papers">Call for Full Papers</a></li>
-                        <li><a href="#{{ site.baseurl }}/call-for-short-papers" class='disabled'>Call for Short Papers</a></li>
+                        <li><a href="#{{ site.baseurl }}/call-for-short-papers" class='disabled'>Call for Vision Papers</a></li>
                         <li><a href="#{{ site.baseurl }}/call-for-tutorials">Call for Tutorials</a></li>
                         <li><a href="#{{ site.baseurl }}/call-for-workshops">Call for Workshops</a></li>
-                        <li><a href="#{{ site.baseurl }}/call-for-demonstration">Call for Demonstrations</a></li>
-                        <li><a href="#{{ site.baseurl }}/call-for-doctoral-consortium-papers">Call for Doctoral Consortium Papers</a></li>
-                        <li><a href="#{{ site.baseurl }}/call-for-industry-track-papers">Call for Industry Track Papers</a></li>
+                        <!-- <li><a href="#{{ site.baseurl }}/call-for-industry-track-papers">Call for Industry Track Papers</a></li> -->
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Program</a>
                     <ul class="dropdown-menu">
-                        <li><a href="#{{ site.baseurl }}/program-at-a-glance">Program at a Glance</a></li>
-                        <li><a href="#{{ site.baseurl }}/schedule">Schedule</a></li>
-                        <li><a href="#{{ site.baseurl }}/booklets">Booklets</a></li>
+                        <!-- <li><a href="#{{ site.baseurl }}/program-at-a-glance">Program at a Glance</a></li> -->
                         <li><a href="#{{ site.baseurl }}/keynotes">Keynotes and Panel</a></li>
+                        <li><a href="#{{ site.baseurl }}/schedule">Schedule</a></li>
+                        <!-- <li><a href="#{{ site.baseurl }}/keynotes">Keynotes and Panel</a></li> -->
                         <li><a href="#{{ site.baseurl }}/tutorials">Tutorials</a></li>
                         <li><a href="#{{ site.baseurl }}/workshops">Workshops</a></li>
-                        <li><a href="#{{ site.baseurl }}/doctoral-consortium">Doctoral Consortium</a></li>
-                        <li><a href="#{{ site.baseurl }}/industry-track-schedule">Industry Track</a></li>
-                        <li><a href="#{{ site.baseurl }}/summer-school">Summer School</a></li>
+                        <!-- <li><a href="#{{ site.baseurl }}/industry-track-schedule">Industry Track</a></li> -->
                         <li><a href="#{{ site.baseurl }}/awards">Awards</a></li>
                         <li><a href="#{{ site.baseurl }}/accepted-papers">Accepted Papers</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                         <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Attend</a>
-                        <ul class="dropdown-menu">                            
-                            <!-- <li><a href="https://sigir-schedule.baai.ac.cn/">Virtual Conference Portal</a></li> -->
-                            <li><a href="#{{ site.baseurl }}/virtual-discussion-rooms">Virtual Discussion Rooms</a></li>
+                        <ul class="dropdown-menu">
                             <li><a href="#{{ site.baseurl }}/registration">Registration</a></li>
                             <li><a href="#{{ site.baseurl }}/presentation-instructions">Presentation Instructions</a></li>
-                            <li><a href="#{{ site.baseurl }}/call-for-volunteers">Call for Volunteers</a></li>
-                            <li><a href="#{{ site.baseurl }}/volunteers">Volunteers</a></li>
                             <li><a href="#{{ site.baseurl }}/travel-grants">Travel Grants</a></li>
                             <li><a href="#{{ site.baseurl }}/visa-information">Visa Information</a></li>
                             <li><a href="#{{ site.baseurl }}/accommodation">Accommodation</a></li>
                             <li><a href="#{{ site.baseurl }}/travel">Travel</a></li>
-                            <li><a href="#{{ site.baseurl }}/venue">Venue</a></li>
                         </ul>
                 </li>
                 <li class="dropdown">
@@ -61,10 +53,10 @@
                     <ul class="dropdown-menu">                            
                         <li><a href="{{ site.baseurl }}/steerings">Steering Committees</a></li>
                         <li><a href="{{ site.baseurl }}/organizers">Organizing Committees</a></li>
-                        <li><a href="{{ site.baseurl }}/pcs">Program Committees</a></li>
+                        <li><a href="#{{ site.baseurl }}/pcs">Program Committees</a></li>
                     </ul> 
                 </li>
-                <!-- <li class=""><a href="{{ site.baseurl }}/organizers" class="">Committees</a></li> -->
+
                 
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Past Conference</a>
