--- a/CogMI2025/_includes/banner.html
+++ b/CogMI2025/_includes/banner.html
@@ -2,7 +2,7 @@
     <script type="text/javascript">
         //Get Banner image by random
         var n = Math.floor(Math.random()*6+1);
-        document.write('<img class="img-responsive full-width"  src="{{ site.baseurl }}/assets/img/main-banners/pitt_banner_' + n + '.jpg" alt="CIC 2025">');
+        document.write('<img class="img-responsive" style="height: 500px; margin-left: auto; margin-right: auto;" src="{{ site.baseurl }}/assets/img/main-banners/pitt_banner_' + n + '.jpg" alt="CIC 2025">');
     </script>
 </div>
 
