--- a/CogMI2025/_includes/navbar.html
+++ b/CogMI2025/_includes/navbar.html
@@ -6,12 +6,12 @@
                 <span class="fa fa-bars"></span>
             </button>
             <a class="navbar-brand brand-style" href="{{ site.baseurl }}/">
-                <img id="logo-header" src="{{ site.baseurl }}/assets/img/IEEE-CS_LogoTM-white.png" width="100" alt="Logo">
+                <img id="logo-header" src="{{ site.baseurl }}/assets/img/IEEE-CS_LogoTM-black.png" width="100" alt="Logo">
             </a>
         </div>
         <div class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-                <li class=""><a href="../index.html" style="font-weight: 1000; color: #fff">IEEE CogMI</a></li>
+                <li class=""><a href="../index.html" style="font-weight: 1000; color: #687074">IEEE CogMI</a></li>
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Calls</a>
                     <ul class="dropdown-menu">
