--- a/cic2025/_includes/navbar.html
+++ b/cic2025/_includes/navbar.html
@@ -45,7 +45,7 @@
                             <li><a href="#{{ site.baseurl }}/travel-grants">Travel Grants</a></li>
                             <li><a href="#{{ site.baseurl }}/visa-information">Visa Information</a></li>
                             <li><a href="#{{ site.baseurl }}/accommodation">Accommodation</a></li>
-                            <li><a href="#{{ site.baseurl }}/travel">Travel</a></li>
+                            <li><a href="{{ site.baseurl }}/travel">Travel</a></li>
                         </ul>
                 </li>
                 <li class="dropdown">
