--- a/cic2025/_includes/navbar1.html
+++ b/cic2025/_includes/navbar1.html
@@ -44,7 +44,7 @@
                             <li><a href="#{{ site.baseurl1 }}/travel-grants">Travel Grants</a></li>
                             <li><a href="#{{ site.baseurl1 }}/visa-information">Visa Information</a></li>
                             <li><a href="#{{ site.baseurl1 }}/accommodation">Accommodation</a></li>
-                            <li><a href="#{{ site.baseurl1 }}/travel">Travel</a></li>
+                            <li><a href="{{ site.baseurl1 }}/travel">Travel</a></li>
                         </ul>
                 </li>
                 <li class="dropdown">
@@ -59,16 +59,12 @@
                 <li class="dropdown">
                     <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">Past Conference</a>
                     <ul class="dropdown-menu">
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2024/" target="_blank">CIC 2024</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2023/" target="_blank">CIC 2023</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2022/" target="_blank">CIC 2022</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2021/" target="_blank">CIC 2021</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2020/" target="_blank">CIC 2020</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2019/" target="_blank">CIC 2019</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2018/" target="_blank">CIC 2018</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2017/" target="_blank">CIC 2017</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2016/" target="_blank">CIC 2016</a></li>
-                        <li><a href="https://www.sis.pitt.edu/lersais/conference/cic/2015/" target="_blank">CIC 2015</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/tps/2024/" target="_blank">TPS 2024</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/tps/2023/" target="_blank">TPS 2023</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/tps/2022/" target="_blank">TPS 2022</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/tps/2021/" target="_blank">TPS 2021</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/tps/2020/" target="_blank">TPS 2020</a></li>
+                        <li><a href="https://www.sis.pitt.edu/lersais/conference/tps/2019/" target="_blank">TPS 2019</a></li>
                     </ul>
                 </li>
 
